Answer the cuBLAS question end to end, and answer it no
The previous commit quoted a 6.8x/7.3x cuBLAS advantage at f32 and left the
"opportunistically dlopen it where the toolkit exists" door open. That ratio is
a KERNEL ratio, which is the wrong measurement for phase 1, where the copies are
on the clock too. CublasEndToEnd.java runs both kernels through both phases at
both widths, and the door should be shut:

- At f64 -- linalg's DEFAULT width -- cuBLAS is a REGRESSION, 10-25% slower than
  the naive tiled kernel at every size measured. Both are pinned by the same
  scarce fp64 units, so DGEMM's heuristics and setup are pure overhead. For the
  width most rontolisp programs actually use, the dependency buys negative
  performance.
- At f32 under phase 1 the 7x collapses to 1.2-3.0x, since the copies it does
  not eliminate become the bulk of the call. The full 7x exists only in the
  phase-3 resident world at n >= 1024.
- The price is 660 MB: libcublas.so.13 is 59 MB but links libcublasLt.so.13 at
  601 MB.

So the built-in PTX is not a stopgap, it is the answer, and the f32 gap is a
self-contained kernel-tuning exercise needing no dependency. Recorded the ROI
order that follows -- single-float adoption (44x) beats residency (2-4x) beats
kernel tuning (up to 7x, f32 only) -- with cuBLAS a strictly worse way to buy
the last of those.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>